[package]
authors = ["Zhiting Zhu"]
build = "build.rs"
name = "rust-bpf"
version = "0.1.0"

[build-dependencies]
bindgen = "0.31.2"

[dependencies]
syscall = "0.2.1"
libc = "0.2.29"
byteorder = "1.1.0"
xmas-elf = "0.6.0"
nix = "0.9.0"
regex = "0.2"
lazy_static = "0.2"
bcc-sys = "0.3.3"
num_cpus = "1.0"

[dev-dependencies]
quote = "0.3"
