[package]
authors = ["Zhiting Zhu"]
build = "build.rs"
name = "rust-bpf"
version = "0.1.0"

[build-dependencies]
bindgen = "0.36"

[dependencies]
syscall = "0.2.1"
libc = "0.2.40"
byteorder = "1.2.2"
xmas-elf = { git = "https://github.com/nrc/xmas-elf.git" }
nix = "0.10.0"
regex = "0.2.10"
lazy_static = "1.0"
bcc-sys = "0.6.1"
failure = "0.1.1"
num_cpus = "1.0"

[dev-dependencies]
quote = "0.3"
